# Smart-Mall-Management-System

./: .editorconfig  .env.example  .gitignore  AdminDashboardPage.tmp.jsx  README.md  check_flex.py  docker-compose.yml  fix.js  fix_minmax.py  fix_table.py  remove_dup.py  script.js  tasks.ps1
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py
backend/app/api/v1/admin/: routes.py
backend/app/api/v1/analytics/: __init__.py
backend/app/api/v1/auth/: routes.py
backend/app/api/v1/complaints/: __init__.py
backend/app/api/v1/discovery/: __init__.py
backend/app/api/v1/events/: __init__.py
backend/app/api/v1/favorites/: __init__.py
backend/app/api/v1/lost_found/: __init__.py
backend/app/api/v1/loyalty/: __init__.py
backend/app/api/v1/movies/: __init__.py
backend/app/api/v1/notifications/: __init__.py
backend/app/api/v1/offers/: __init__.py
backend/app/api/v1/parking/: __init__.py
backend/app/api/v1/queues/: routes.py
backend/app/api/v1/stores/: routes.py
backend/app/api/v1/users/: __init__.py
backend/app/auth/repositories/: user_repository.py
backend/app/auth/schemas/: tokens.py  users.py
backend/app/auth/services/: security.py  users.py
backend/app/core/: celery_app.py  redis.py  repository.py
backend/app/core/config/: __init__.py
backend/app/core/logging/: __init__.py
backend/app/db/: __init__.py  mongodb.py  seed.py
backend/app/db/models/: __init__.py  complaint.py  event_reminder.py  favorite.py  lost_report.py  loyalty.py  movie_booking.py  notification.py  offer.py  parking.py  queue.py  store.py  user.py
backend/app/models/: __init__.py  complaint.py  loyalty.py  notification.py  offer.py  parking.py  queue.py  store.py
backend/app/websocket/managers/: parking.py  queues.py
backend/app/websocket/routes/: __init__.py  parking.py  queues.py
backend/config/: README.md
backend/smart_mall_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py  test_health_endpoints.py  test_stores.py
config/: secrets.sample.yaml
config/env/: .env.backend.example  .env.db.example  .env.frontend.example  .env.redis.example
config/profiles/: dev.yaml  prod.yaml
deploy/docker/db/: init.sql
docs/: README.md
frontend/: .env.example  classes_in_css.txt  classes_in_jsx.txt  css_classes.txt  eslint.config.js  fix2.js  fix3.cjs  index.html  jsx_classes.txt  missing_classes.txt  package-lock.json  package.json  tailwind.config.js  temp_tokens.txt  tsconfig.json  vite.config.js
frontend/src/: main.jsx  main.tsx
frontend/src/components/: GlobalCommandPalette.jsx  (+1 more)
tests/: README.md
(+117 files in other folders)
