[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-mall-backend"
version = "0.1.0"
description = "Smart Mall Management System backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
	{ name = "SmartMall", email = "dev@smartmall.local" }
]

dependencies = [
	"fastapi>=0.115.0,<0.116.0",
	"uvicorn[standard]>=0.30.0,<0.31.0",
	"pydantic>=2.8.0,<3.0.0",
	"python-dotenv>=1.0.0,<2.0.0",
	"python-jose[cryptography]>=3.3.0,<4.0.0",
	"passlib[bcrypt]>=1.7.4,<2.0.0"
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0,<9.0.0",
	"httpx>=0.27.0,<0.28.0",
	"ruff>=0.5.0,<0.6.0"
]

[project.urls]
Homepage = "https://example.com/smart-mall"
Repository = "https://example.com/smart-mall/repo"

